# skuldbot-studio

./: .gitignore  .gitkeep  .npmrc  BRANDING.md  DESIGN_SYSTEM.md  INTEGRATION_GUIDE.md  MASTER_DESIGN_SYSTEM.md  NEXION_ANALYSIS.md  REFACTORING_UI_CHECKLIST.md  TESTING_AI_PLANNER_V2.md  TEST_INTEGRATION.md  check-setup.sh  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: migrate_legacy_expressions.py  run_planner_flow_tests.mjs  smoke_compile_all_nodes.sh  verify_studio.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  protection.rs
src-tauri/src/ai_planner/: connection_validator.rs  db.rs  mod.rs  types.rs
src-tauri/src/ai_planner/providers/: anthropic.rs  aws.rs  azure.rs  custom.rs  mod.rs  ollama.rs  openai.rs  self_hosted.rs  vertex.rs
src-tauri/src/mcp/: client.rs  mod.rs  types.rs
src/components/: AnimatedEdge.tsx  AppLayout.tsx  AutoSaveManager.tsx  BotEditor.tsx  CustomNode.tsx  DebugPanel.tsx  EmptyState.tsx  EngineSetupNotification.tsx  EnvPanel.tsx  FlowEditor.tsx  FormBuilder.tsx  FormPreview.tsx  FormTriggerModal.tsx  GroupNode.tsx  LicenseDialog.tsx  LogsPanel.tsx  NodeConfig.tsx  NodeConfigPanel.tsx  NodeSearchDialog.tsx  ProblemsPanel.tsx  ProjectExplorer.tsx  ProjectToolbar.tsx  ProtectionBuilder.tsx  SettingsPanel.tsx  Sidebar.tsx  TabBar.tsx  Toolbar.tsx  UnifiedSidebar.tsx  ValidationBuilder.tsx  VaultManager.tsx  (+2 more)
tests/: ai-planner-v2-flow.test.ts
(+66 files in other folders)
